# nodian-slint

./: .cursorrules  .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/components/: hello.slint
src/db/: mod.rs
src/features/: markdown_editor.rs  mod.rs
src/ui/: app_window.slint  main_window copy.rs  main_window.rs  markdown_editor.rs  mod.rs
ui/: app.slint  main_window.rs
ui/components/: file_tab.slint  sidebar_button.slint  tree_item.slint
ui/style/: app.slint
