[package]
name = "nodian"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.0"
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.9"

[build-dependencies]
slint-build = "1.8.0"
